--- a/src/pages/betal3.astro
+++ b/src/pages/betal3.astro
@@ -24,6 +24,13 @@ import step3 from "../assets/images/3_3.svg";
     <div class="md:col-span-4 my-4 md:mx-16 lg:mx-24 xl:mx-32 md:my-12 flex justify-center items-center min-h-screen">
       <div class="border border-black p-6 md:p-12 inline-block w-full">
 
+            <!-- Knap -->
+  <div class=" mr-[22rem] md:mr-[42rem] md:mb-5">
+         <a href="javascript:history.back()">
+            <Button variant="back"></Button>
+          </a>
+  </div>
+
         <!-- Titel -->
         <div class="mb-6 flex justify-between items-center">
           <h3>ADRESSE</h3>
@@ -39,7 +46,7 @@ import step3 from "../assets/images/3_3.svg";
               type="text"
               id="address"
               placeholder="Indtast din adresse..."
-              class="w-full border border-black p-3 focus:outline-none focus:ring-2 focus:ring-red-500"
+              class="bg-creamywhite w-full border border-brown p-3 focus:outline-none focus:ring-2 focus:brown"
             />
           </div>
 
@@ -50,7 +57,7 @@ import step3 from "../assets/images/3_3.svg";
               type="number"
               id="zip"
               placeholder="Indtast dit postnummer"
-              class="w-full border border-black p-3 focus:outline-none focus:ring-2 focus:ring-red-500"
+              class="bg-creamywhite w-full border border-brown p-3 focus:outline-none focus:ring-2 focus:brown"
             />
           </div>
 
@@ -61,7 +68,7 @@ import step3 from "../assets/images/3_3.svg";
               type="text"
               id="city"
               placeholder="Indtast din by..."
-              class="w-full border border-black p-3 focus:outline-none focus:ring-2 focus:ring-red-500"
+              class="bg-creamywhite w-full border border-brown p-3 focus:outline-none focus:ring-2 focus:brown"
             />
           </div>
 
@@ -70,7 +77,7 @@ import step3 from "../assets/images/3_3.svg";
             <input
               type="checkbox"
               id="confirmInfo"
-              class="mt-1 w-5 h-5 text-red-700 border-gray-300 focus:ring-red-500"
+              class=" bg-creamywhite mt-1 w-5 h-5 text-brown border-brown focus:brown"
             />
             <label for="confirmInfo" class="text-smb md:text-s ml-3">
               Jeg har sikret mig at ovenstående information er 100% korrekte.
@@ -82,7 +89,7 @@ import step3 from "../assets/images/3_3.svg";
             <input
               type="checkbox"
               id="privacyPolicy"
-              class="mt-1 w-5 h-5 text-red-700 border-gray-300 focus:ring-red-500"
+              class="bg-creamywhite mt-1 w-5 h-5 text-red-700 border-gray-300 focus:brown"
             />
             <label for="privacyPolicy" class="text-smb md:text-s ml-3">
               Jeg har læst jeres privatpolitik og generelle bestemmelser og er indforstået med begge.
@@ -92,9 +99,8 @@ import step3 from "../assets/images/3_3.svg";
         <!-- Knapper -->
           <div class="flex justify-center gap-4">
             <!-- Tilbage Knap -->
-            <a href="/betal2">
-              <Button variant="secondary"></Button>
-            </a>
+           <div class="flex justify-center gap-4 mt-8">
+  
 
             <!-- Næste Knap -->
             <a href="/tak">
