--- a/src/pages/tak.astro
+++ b/src/pages/tak.astro
@@ -9,21 +9,30 @@ import taktegning from "../assets/images/taktegning.svg";
 ---
 <MainLayout title="Tak for din bestilling">
 
+
 <!-- Købsflow Side -->
 <section class="text-black">
-  <div class="grid grid-cols-1 md:grid-cols-6 mx-auto">
+  <div class="grid grid-cols-1 md:grid-cols-6">
     <!-- Venstre Illustration -->
     <div class="hidden md:block md:col-span-2 items-center	">
-      <div class="relative h-full border-r border-black">
+      <div class="relative h-full border-r border-brown">
         <!-- Illustration -->
     <img class="md:object-cover :w-full h-auto" src={taktegning.src} alt="kasse og vin">
       </div>
     </div>
 
+    
     <!-- Højre Indhold -->
-         <div class="md:col-span-4 my-4 md:mx-16 lg:mx-24 xl:mx-32 md:my-12 flex justify-center items-center min-h-screen">
-  <div class="border border-black p-6 md:p-12 inline-block text-center">
+         <div class=" mt-20 md:mt-36 md:col-span-4 my-4 md:mx-16 lg:mx-24 xl:mx-32 md:my-12 min-h-screen">
+  <div class="border border-black p-6 md:p-12 inline-block text-center mx-8">
 
+    <!-- Knap -->
+  <div class=" mr-[22rem] md:mr-[40rem] md:mb-5">
+         <a href="javascript:history.back()">
+            <Button variant="back"></Button>
+          </a>
+  </div>
+          
     <!-- Titel -->
     <h2 class="mb-6">
       TAK FOR DIN BESTILLING
@@ -50,10 +59,6 @@ import taktegning from "../assets/images/taktegning.svg";
 <!-- Knapper -->
 <div class="flex justify-center gap-4">
   <!-- Tilbage Knap -->
-  <a href="javascript:history.back()">
-  <Button variant="secondary"></Button>
-</a>
-
 
   <!-- Næste Knap -->
   <a href="/">
@@ -65,6 +70,8 @@ import taktegning from "../assets/images/taktegning.svg";
 </div>
 
 </section>
+
+  <img class=" ml-[8rem] -mt-[22rem] mb-10 block sm:hidden md:object-cover w-[50%] h-[70%] object-cover " src={taktegning.src} alt="kasse og vin">
 
 
 </MainLayout>
