--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -95,7 +95,7 @@ Leveringsdag: Sidste torsdag i måneden </p>
   <div class="mx-auto grid md:grid-cols-2">
     <!-- Overskrift -->
      <div>
-    <h2 class="text-2xl md:text-4xl font-bold uppercase mb-4">SÅDAN FUNGERER DET</h2>  <p class="text-mmb md:text-m">
+    <h2 class="text-2xl md:text-4xl font-bold uppercase mb-4">SÅDAN FUNGERER DET</h2>  <p class="text-mmb md:text-m md:pb-8 pb-4">
       Vores vinabonnementskoncept er simpelt: Bestil din fortrukne vinkasse og få den leveret til døren fast hver måned. 
       Ønsker du at pause eller afmelde dit abonnement, skal du blot gøre det senest d. 15. i måneden her på hjemmesiden.
     </p>
