--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -194,7 +194,7 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
     <section class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-16 items-center">
       <!-- Venstre Tegning -->
       <div>
-        <img src={omostegning.src} alt="Tegning" class=" ml-12 md:ml-20 w-[70%] h-[90%] object-cover">
+        <img src={omostegning.src} alt="Tegning" class="md:pb-24 ml-12 md:ml-20 w-[70%] h-[90%] object-cover">
       </div>
 
       <!-- Højre Indhold -->
