--- a/src/components/Anmeldelser.astro
+++ b/src/components/Anmeldelser.astro
@@ -32,7 +32,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
     <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Enkel og overkommelig luksus</p>
-            <p class="text-smb md:text-s leading-relaxed">
+            <p class="text-smb md:text-s">
               "Jeg elsker vin, men jeg hader at stå i supermarkedet og være usikker på, hvad jeg skal vælge. Denne vinabonnementstjeneste har været en gave! 8 flasker for kun 599 kr..."
             </p>
           </div>
@@ -40,13 +40,13 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         </div>
 
         <!-- Review 2 -->
-        <div class="text-center space-y-4 flex flex-col justify-between h-full">
+        <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
           <div class="flex justify-center text-black py-2">
     <img class="" src={stjerne2.src} alt="4 trustpilot stjerner">
             </div>
             <p class="text-mmb md:text-m">Perfekt til vinelskeren på budget</p>
-            <p class="text-smb md:text-s leading-relaxed">
+            <p class="text-smb md:text-s">
               "Jeg er ikke en vinkender, men jeg kan godt lide at prøve forskellige vine, og denne tjeneste er perfekt..."
             </p>
           </div>
@@ -54,7 +54,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         </div>
 
         <!-- Review 3 -->
-        <div class="text-center space-y-4 flex flex-col justify-between h-full">
+        <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
       <div class="flex justify-center text-black py-2">
     <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
@@ -68,7 +68,7 @@ import stjerne2 from "../assets/images/stjerne2.svg";
         </div>
 
         <!-- Review 4 -->
-        <div class="text-center space-y-4 flex flex-col justify-between h-full">
+        <div class="text-center space-y-4 flex flex-col justify-between h-full hidden md:block">
           <div>
       <div class="flex justify-center text-black py-2">
     <img class="" src={stjerne1.src} alt="5 trustpilot stjerner">
