--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -326,7 +326,7 @@ Med vores vinabonnement får du mulighed for at smage forskellige vine hver mån
     <!-- Højre Content-->
     <div class="mb-20">
       <p class=" ml-6 md:mr-0 md:ml-16 tracking-wide text-m md:text-l">Tilmelding til nyhedsbrev</p>
-      <h2 class=" ml-6 md:mr-0 md:ml-16 uppercase leading-tight mb-4 mt-2">FÅ 10% PÅ DIN FØRSTE ORDRE</h2>
+      <h2 class=" ml-6 md:mr-0 md:ml-16 uppercase mb-4 mt-2">FÅ 10% PÅ DIN FØRSTE ORDRE</h2>
         <!--  Input fælt -->
     <form class=" ml-6 md:mr-20 md:ml-16 mr-6 flex flex-row items-center  overflow-hidden">
       <input 
