--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -19,7 +19,7 @@ import igicon from "../assets/images/ig.svg"
     <section class="ml-6 mr-6 md:mr-0 grid grid-cols-1 md:grid-cols-2 md:gap-36 items-start">
       <!-- Venstre Indhold -->
       <div class="order-2 md:order-1">
-        <p class="text-smb md:text-m leading-relaxed mb-6 ">
+        <p class="text-smb md:text-m mb-6 ">
 Hos Explorewines er vores mission at pirre dine smagsløg og give dig unikke vinoplevelser. Brug vores månedskasse til at opdage nye favoritter, hold vinsmagninger med vennerne, eller glæd dig over valgfriheden i vinreolen, når det er tid til at finde den perfekte flaske til weekenden. Vores mål er at levere kvalitetsvine, der giver dig lyst til en slurk mere – fordi de smager fantastisk og samtidig er rimelige i pris.<br>
 
 <br>Explorewines samarbejder primært med små, lokale producenter, der skaber vine med personlighed og sjæl – og som du sjældent finder på supermarkedshylderne. Vi prioriterer altid kvalitet først og har en særlig forkærlighed for økologiske vine.<br>
