--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -29,13 +29,13 @@ Rødvinskasse      </h2>
 599,- per måned (alt inklusivt)      </h4>
         <a href="/betal"><Button>Køb nu</Button></a>
 </div>
-   <p class="text-smb md:text-m leading-relaxed md:pt-10 pt-8">
+   <p class="text-smb md:text-m  md:pt-10 pt-8">
 Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!      </p>
 
 
          <div class="pt-6 col-start-4">
       <h4 class="text-xl font-bold">Detaljer</h4>
-      <ul class="text-smb md:text-m leading-relaxed">
+      <ul class="text-smb md:text-m ">
         <li>Antal vine pr. kasse: 8 stk.</li>
         <li>Pris: 599 DKK (alt inklusivt)</li>
         <li>Leveringsdag: Sidste torsdag i måneden</li>
@@ -161,7 +161,7 @@ Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev fr
 
       <!-- Højre Content -->
       <div class="space-y-4 md:col-start-3 md:col-span-3">
-        <p id="contentDescription" class="text-smb md:text-l leading-relaxed">
+        <p id="contentDescription" class="text-smb md:text-l ">
           Først på listen har vi den alsidige og drikkevenlige LA Cruz Vega. En spansk vin, der elegant kombinerer den klassiske Tempranillo-drue med Merlot og Syrah, som bringer et forfriskende pift til den traditionelle vin. Vinen er fyldt med mørke bær som solbær og brombær, krydret med lette noter af tobak og egefad. Den smager fantastisk sammen med ribbenssteg eller andesteg, og vil være en oplagt ledsager til dine yndlingsretter med rodfrugter og kål.
         </p>
       </div>
