--- a/src/pages/tak.astro
+++ b/src/pages/tak.astro
@@ -45,14 +45,14 @@ import taktegning from "../assets/images/taktegning.svg";
       </p>
 
       <!-- Hovedtekst -->
-      <p class="text-smb md:text-m leading-relaxed mb-6">
+      <p class="text-smb md:text-m mb-6">
         Velkommen til vores vinklub. Dit abonnement er bekræftet, og du vil indenfor få minutter modtage en mail 
         med en oversigt over dit køb. Du modtager vinen inden for 
         <strong>7 arbejdsdage</strong>, og du har allerede nu fuld adgang til alle de fordele og funktioner, vi tilbyder.
       </p>
 
       <!-- Ekstra Besked -->
-      <p class="text-smb md:text-m leading-relaxed mb-8">
+      <p class="text-smb md:text-m mb-8">
         Kan du ikke få nok af vin? Udforsk vores vinshop via knappen nedenfor.
       </p>
 
