--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,11 +9,11 @@ import igicon from "../assets/images/ig.svg"
 <footer class="md:hidden bg-creamywhite text-brown border-t border-brown">
   <!-- Logo -->
    <div class="p-8 border-b">
-          <img class="object-cover w-full h-full" src={explorewinesfooter.src} alt="">
+          <img class="w-full h-full object-cover" src={explorewinesfooter.src} alt="">
     </div>
 
   <!-- Kontakt, Links og Sociale medier -->
-  <div class="grid grid-cols-2 gap-4 px-4 py-8 border-b border-brown">
+  <div class="ml-4 md:ml-0 grid grid-cols-2 gap-4 px-4 py-8 border-b border-brown">
     <!-- Venstre Side: Kontakt og Information -->
     <div class="space-y-6">
       <div>
@@ -143,7 +143,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
       <p class="tracking-wide text-m md:text-[4.5rem]">Nyhedsbrev</p  >
       <p class="text-mmb md:text-m leading-tight mb-4 mt-2">Tilmeld dig vores nyhedsbrev og få 10% rabat på din første ordre</p>
         <!--  Input fælt -->
-    <form class="flex md:flex-row items-center  overflow-hidden ">
+    <form class="flex md:flex-row items-center  overflow-hidden mr-12 ">
       <input 
         type="email" 
         placeholder="Skriv din e-mail her..." 
@@ -156,7 +156,7 @@ Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og ins
         →
       </button>
     </form>
-      <p class="text-xsmb md:text-xs leading-relaxed mt-2">
+      <p class="text-xsmb md:text-xs leading-relaxed mt-2 mr-8">
 Ved tilmelding til nyhedsbrevet accepterer jeg at modtage nyheder, tilbud og inspiration fra ExploreWines via e-mail. Jeg kan til enhver tid afmelde mig via linket i bunden af nyhedsbrevet. Oplysningerne behandles i overensstemmelse med ExploreWines' privatlivspolitik.      </p>
 </div>
   </div>
