--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -126,7 +126,7 @@ import Udforskmobil from "../assets/images/knapheromobil.svg"
 
 <section class=" text-brown mb-12 md:mb-28">
   <!-- Heading -->
-  <div class=" px-4 md:px-6">
+  <div class=" px-4 md:px-6 md:-mt-20">
     <h3 class="">
 Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h3>
   </div>
