--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ import Udforskmobil from "../assets/images/knapheromobil.svg"
 
 
 ---
-<MainLayout title="Titel">
+<MainLayout title="Explore Wines">
 	<article class="">
 																	 <!-- Hero section desktop  -->
 <section class="relative mb-40 h-2/3 hidden md:block">
