--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -9,7 +9,7 @@ import fbicon from "../assets/images/fb.svg"
 import igicon from "../assets/images/ig.svg"
 
 ---
-<MainLayout title="Titel">
+<MainLayout title="Om os">
   <article class="mx-auto px-4 md:px-8">
 
     <!-- Første Sektion -->
