--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -9,7 +9,7 @@ import Card from "../components/Card.astro";
 import abonnementkasse from "../assets/images/abonnementkasse.svg";
 import Anmeldelser from "../components/Anmeldelser.astro";
 ---
-<MainLayout title="Titel">
+<MainLayout title="Rødvinskassen">
 	<article class="mx-auto">
    <h1 class="mb-12 ml-8 md:ml-14 md:mt-24 mt-16">
       Vinabonnement
