--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,8 @@ import igicon from "../assets/images/ig.svg"
     </div>
 
   <!-- Kontakt, Links og Sociale medier -->
-  <div class="ml-4 md:ml-0 grid grid-cols-2 gap-4 px-4 py-8 border-b border-brown">
+   <div class="border-b border-brown">
+  <div class="ml-4 md:ml-0 grid grid-cols-2 gap-4 px-4 py-8">
     <!-- Venstre Side: Kontakt og Information -->
     <div class="space-y-6">
       <div>
@@ -56,6 +57,7 @@ import igicon from "../assets/images/ig.svg"
         </a>
       </div>
     </div>
+  </div>
   </div>
 
  <!-- Højre side footer: Nyhedsbrev -->
