--- a/src/pages/abonnement.astro
+++ b/src/pages/abonnement.astro
@@ -29,32 +29,38 @@ import Abonnementcard from "../components/Abonnementcard.astro";
   <section class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3">
     <!-- 1 Card -->
     <div class="card group" data-card="1">
+      <a href="/rodwin">
       <Abonnementcard
         cardimage="roedvin.webp"
         cardimagealt="flasker"
         navn="Rødvinskasse"
         description="Med rødvinskassen får du rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!"
       ></Abonnementcard>
+      </a>
     </div>
 
     <!-- 2 Card -->
     <div class="card group" data-card="2">
+          <a href="/rodwin">
       <Abonnementcard
         cardimage="hvidvin.webp"
         cardimagealt="Vinflaske"
         navn="Hvidvinskasse"
         description="Udforsk en verden af smag med fire unikke hvidvine fra forskellige hjørner af kloden. Nyd den livlige Chenin Blanc fra Sydafrikas Coastal Region, den blomstrede Torrontés fra Mendoza i Argentina, den delikate Riesling Spätlese Trocken fra Rheinhessen i Tyskland og den friske Verdejo fra Spaniens DO La Mancha. Denne hvidvinskasse er ideel til en smagfuld oplevelse eller som et eksklusivt indslag på din vinreol!"
       ></Abonnementcard>
+</a>
     </div>
 
     <!-- 3 Card -->
     <div class="card group" data-card="3">
+      <a href="/rodwin">
       <Abonnementcard
         cardimage="mixed.webp"
         cardimagealt="Vinflaske"
         navn="Mixedkasse"
         description="Tag på en smagsrejse med otte udsøgte vine fra hele verden. Nyd frugtig Syrah, elegant Tempranillo, fyldig Touriga Nacional og klassisk Pinotage blandt rødvinene. Fra hvidvinsudvalget venter livlig Chenin Blanc, aromatisk Torrontés, delikat Riesling og sprød Verdejo. En oplagt mulighed for at udforske nye smagsoplevelser eller tilføje et sofistikeret touch til din vinreol!"
       ></Abonnementcard>
+      </a>
     </div>
 
     </div>
@@ -74,7 +80,7 @@ import Abonnementcard from "../components/Abonnementcard.astro";
 Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!        </p>
     
         <div class="mt-4">
-          <a href="/abonnement"><Button variant="secondary">Køb nu</Button></a>
+          <a href="/rodwin"><Button variant="secondary">Køb nu</Button></a>
         </div>
 
       </div>
