--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -207,10 +207,10 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
         </p>
         <!-- Sociale Medier -->
         <div class="mb-20 md:mb-0 ml-6 md:ml-0 flex md:justify-start space-x-4">
-          <a href="#" aria-label="Facebook">
+          <a href="https://www.facebook.com/ExploreWines/" aria-label="Facebook">
             <img src={fbicon.src} alt="Facebook" class="w-10 h-10">
           </a>
-          <a href="#" aria-label="Instagram">
+          <a href="https://www.instagram.com/explorewines.dk/" aria-label="Instagram">
             <img src={igicon.src} alt="Instagram" class="w-10 h-10">
           </a>
         </div>
