--- a/src/pages/betal.astro
+++ b/src/pages/betal.astro
@@ -50,14 +50,14 @@ import step1 from "../assets/images/1_3svg.svg";
             <div class="flex-1 ml-6 md:-mt-20 -mt-8">
               <p class="text-mmb md:text-m">Rødvinskasse (abonnement)</p>
             </div>
-            <div class="flex items-center space-x-2">
+            <div class="flex items-center space-x-2 md:mt-[10rem]">
               <button class="text-mmb md:text-m">-</button>
-              <span class="text-mmb md:text-m">1 stk</span>
+              <span class="text-mmb md:text-m ">1 stk</span>
               <button class="text-xl">+</button>
             </div>
             <div class="text-mmb md:text-m ml-4 text-right mr-6 md:-mt-14 -mt-8">
-              <p>599,-</p>
-              <a href="#" class="text-red-700 text-sm">fjern x</a>
+              <p class="">599,-</p>
+              <a href="#" class="text-red-700 text-sm  ">fjern x</a>
             </div>
           </div>
 
@@ -72,7 +72,7 @@ import step1 from "../assets/images/1_3svg.svg";
             <div class="flex-1">
               <p class="text-mmb md:text-m ml-6 md:-mt-14 -mt-8">2023 Chardonnay, Terre Siciliane IGP</p>
             </div>
-            <div class="flex items-center space-x-2">
+            <div class="flex items-center space-x-2 md:mt-[10rem]">
               <button class="text-xl">-</button>
               <span class="text-mmb md:text-m ">1 stk</span>
               <button class="text-xl">+</button>
