--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -199,8 +199,8 @@ Vi har sat prisen for vinkasserne inklusive levering til kr. 599,- og vi kan gar
 
       <!-- Højre Indhold -->
       <div class="md:text-left">
-        <p class="tracking-wide mb-2 ml-6 md:ml-0">Mere fra Explorewines</p>
-        <h2 class="uppercase font-bold mb-4 ml-6 md:ml-0">FØLG VORES HVERDAG</h2>
+        <p class="text-mmd md:text-l tracking-wide ml-6 md:ml-0">Mere fra Explorewines</p>
+        <h2 class="uppercase font-bold mb-4 ml-6 md:ml-0 ">FØLG VORES HVERDAG</h2>
         <p class="text-smb md:text-m mb-4 ml-6 md:ml-0">
           Vil du følge med i vores hverdag, få nyheder om nye produkter og deltage i spændende konkurrencer?
           Så følg os på vores sociale medieprofiler.
