--- a/src/pages/rodwin.astro
+++ b/src/pages/rodwin.astro
@@ -27,7 +27,11 @@ Rødvinskasse      </h2>
 <div class="flex items-center justify-between">
       <h4 class="">
 599,- per måned (alt inklusivt)      </h4>
-        <a href="/betal"><Button>Køb nu</Button></a>
+
+<div class="md:mr-6">
+   <a href="/betal"><Button>Køb nu</Button></a>
+</div>
+     
 </div>
    <p class="text-smb md:text-m  md:pt-10 pt-8">
 Tag på en smagsrejse med fire nøje udvalgte rødvine fra hele verden. Oplev frugtig Syrah fra Rhône og elegant Tempranillo fra Spanien, fyldig Touriga Nacional fra Portugal og klassisk Pinotage fra Sydafrika. Rødvinskassen er perfekt til vinsmagning eller som en eksklusiv tilføjelse til din vinreol!      </p>
