--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -131,41 +131,40 @@ import Udforskmobil from "../assets/images/knapheromobil.svg"
 Med vores vinabonnement får du mulighed for at smage forskellige vine hver måned. Vi udvælger og sammensætter tre forskellige vinkasser, som du kan vælge imellem.    </h3>
   </div>
 
-<div class=" mt-6 md:mt-10 mx-auto grid grid-cols-1 md:grid-cols-3 gap-16 place-content-between">
+<article class=" mt-6 md:mt-10 mx-auto grid grid-cols-1 md:grid-cols-3 gap-16 place-content-between">
   <!-- Rødvinskasse -->
-  <div class="flex flex-col">
+  <div class="flex flex-col justify-between">
     <a href="/rodwin">
     <img class="w-[85%] h-[100%] object-contain md:ml-2 ml-6" src={forside1.src} alt="rødvinskasse">
     <div class="pl-6 md:pl-6 md:mt-6 mt-4"> 
       <p class="text-mmb md:text-l mb-1">Rødvinskasse</p>
       <a class="" href="/rodwin"><Button>Køb nu</Button></a>
       </a>
+      </div>
     </div>
-  </div>
 
   <!-- Hvidvinskasse -->
-  <div class="flex flex-col">
+    <div class="flex flex-col justify-between">
         <a href="/rodwin">
     <img class="w-[85%] h-[120%] object-contain md:ml-16 ml-6" src={forside2.src} alt="hvidvinskasse">
     <div class="pl-6 md:pl-0 md:ml-16 md:mt-6 mt-4">
       <p class="text-mmb md:text-l mb-1">Hvidvinskasse</p>
       <a href="/rodwin"><Button>Køb nu</Button></a>
-            </a>
+      
+      </div>
     </div>
-  </div>
 
   <!-- Mixed kasse -->
-  <div class="flex flex-col ">
+  <div class="flex flex-col justify-between">
         <a href="/rodwin">
-    <img class="w-[80%] h-[90%] md:ml-20 object-contain ml-6" src={forside3.src} alt="mixedkasse">
+    <img class="w-[80%] h-[100%] md:ml-20 object-contain ml-6" src={forside3.src} alt="mixedkasse">
     <div class="pl-6 md:pl-0 md:ml-20 md:mt-6 mt-4">
       <p class=" text-mmb md:text-l mb-1">Mixed kasse</p>
       <a href="/rodwin"><Button>Køb nu</Button></a>
-            </a>
-
+      
     </div>
   </div>
-</div>
+</article>
 
 </section>
 
